--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -1,20 +1,24 @@
-#-------------  base --------------------
-authorName=Huahui.Wu
-version=2.7.9
 #------------- project ------------------
-api_path=D:\\WorkSpace\\IDEA\\Work\\scs-app3\\scs-{model}\\scs-{model}-api
-web_path=D:\\WorkSpace\\IDEA\\Work\\scs-app3\\scs-{model}\\scs-{model}-web
+prefix_path=D:\\WorkSpace\\IDEA\\Work\\scs-app\\
+api_path=scs-{model}\\scs-{model}-api
+web_path=scs-{model}\\scs-{model}-web
 package=com.runlion.scs
 base_package=com.runlion.scs.{model}
-model=sap
 #------------- database -----------------
-driverName=com.mysql.jdbc.Driver
+driverName=com.mysql.cj.jdbc.Driver
 user=mro
-password=Hsmro1234!
-url=jdbc:mysql://192.168.173.67:3306/sap?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8
+password=***
+url=jdbc:mysql://192.168.173.67:3306/{model}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8
+#-------------  \u9700\u8981\u4FEE\u6539\u7684\u5730\u65B9 --------------------
+# \u4F5C\u8005
+authorName=Huahui.Wu
+# \u7248\u672C
+version=2.8.6
+# \u6A21\u5757
+model=wms
 # \u8868\u540D\uFF0C\u652F\u6301\u591A\u8868 ";" \u5206\u9694
-table_name=offline_assessment_score;
+table_name=test;
+# \u65B9\u6CD5\uFF0C\u9700\u8981\u751F\u6210\u7684\u65B9\u6CD5";" \u5206\u9694 \u3010selectVoByIds;selectVoMapByIds;list;getInfo;export;save;deleted;\u3011
+method=selectVoByIds;selectVoMapByIds;list;getInfo;export;save;deleted;
 
-# \u65B9\u6CD5\uFF0C\u9700\u8981\u751F\u6210\u7684\u65B9\u6CD5";" \u5206\u9694 \u3010list;listInfo;export;save;deleted;\u3011
-method=list;listInfo;export;save;deleted;
 
