--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
             <version>2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.1</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
