--- a/src/main/resources/env.properties
+++ b/src/main/resources/env.properties
@@ -7,18 +7,24 @@ base_package=com.runlion.scs.{model}
 #------------- database -----------------
 driverName=com.mysql.cj.jdbc.Driver
 user=mro
-password=***
+password=Hsmro1234!
 url=jdbc:mysql://192.168.173.67:3306/{model}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8
+#user=root
+#password=123456
+#url=jdbc:mysql://192.168.173.71:3306/{model}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8
 #-------------  \u9700\u8981\u4FEE\u6539\u7684\u5730\u65B9 --------------------
 # \u4F5C\u8005
 authorName=Huahui.Wu
 # \u7248\u672C
-version=2.8.6
+version=2.8.8.2 \u62DB\u6295\u6807
 # \u6A21\u5757
-model=wms
+model=bid
 # \u8868\u540D\uFF0C\u652F\u6301\u591A\u8868 ";" \u5206\u9694
-table_name=test;
+# bidding;bidding_detail;bidding_reviewer;
+table_name=bid_wechat_user;
+#table_name=bidding_supplier_price_competition;bidding_supplier_range;bidding_supplier_sign_shortlist;bidding_win;bidding_win_detail;bidding_win_supplier;
 # \u65B9\u6CD5\uFF0C\u9700\u8981\u751F\u6210\u7684\u65B9\u6CD5";" \u5206\u9694 \u3010selectVoByIds;selectVoMapByIds;list;getInfo;export;save;deleted;\u3011
-method=selectVoByIds;selectVoMapByIds;list;getInfo;export;save;deleted;
+method=selectVoByIds;selectVoMapByIds;
+#method=selectVoByIds;selectVoMapByIds;selectByCondition;list;getInfo;export;save;deleted;
 
 
