--- a/src/main/resources/env-sat.properties
+++ b/src/main/resources/env-sat.properties
@@ -1,6 +1,6 @@
 #------------- project ------------------
-#prefix_path=D:\\WorkSpace\\IDEA\\Work\\scs-app2\\
-prefix_path=D:\\WorkSpace\\IDEA\\Work\\scs-app\\
+prefix_path=D:\\WorkSpace\\IDEA\\Work\\scs-app2\\
+#prefix_path=D:\\WorkSpace\\IDEA\\Work\\scs-app\\
 api_path=scs-{model}\\scs-{model}-api
 web_path=scs-{model}\\scs-{model}-web
 package=com.runlion.scs
@@ -10,21 +10,20 @@ driverName=com.mysql.cj.jdbc.Driver
 #user=mro
 #password=Hsmro1234!
 #url=jdbc:mysql://192.168.173.71:3306/{model}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8
-user=root
+user=zhaolw
 password=msrl@607175
-#url=jdbc:mysql://192.168.173.71:3306/{model}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
-url=jdbc:mysql://192.168.173.71:3306/{model}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
+url=jdbc:mysql://192.168.173.202:3306/{model}?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8
 #-------------  \u9700\u8981\u4FEE\u6539\u7684\u5730\u65B9 --------------------
 # \u4F5C\u8005
-authorName=sxj
+authorName=huahui.wu
 # \u7248\u672C
-version=3.2.3
+version=3.1.2
 # \u6A21\u5757
-model=bid
+model=wms
 # \u8868\u540D\uFF0C\u652F\u6301\u591A\u8868 ";" \u5206\u9694
 # bidding;bidding_detail;bidding_reviewer;
-table_name=specialization_group;specialization_group_association;specialization_group_association_detail;
+table_name=wh_occupy_inventory;
 #table_name=bidding_supplier_price_competition;bidding_supplier_range;bidding_supplier_sign_shortlist;bidding_win;bidding_win_detail;bidding_win_supplier;
 # \u65B9\u6CD5\uFF0C\u9700\u8981\u751F\u6210\u7684\u65B9\u6CD5";" \u5206\u9694 \u3010selectVoByIds;selectVoMapByIds;list;getInfo;export;save;deleted;\u3011
-method=selectVoByIds;selectVoMapByIds;list;getInfo;export;save;deleted;
+method=selectVoByIds;selectVoMapByIds;list;export;getInfo;save;deleted;
 #method=selectVoByIds;selectVoMapByIds;selectByCondition;list;getInfo;export;save;deleted;
